--- a/Assets/CSS/auros.css
+++ b/Assets/CSS/auros.css
@@ -178,9 +178,36 @@ body{
 
 
 
+.nxtPag{
+    width: 120px;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    /* gap: 10px; */
+    /* background-color: blueviolet; */
+    position: absolute;
+    right: -19%;
+    top: 70px;
+    /* display: none; */
+    opacity: 0;
+}
 
+.nxtPag a{
+    background-color: coral;
+    color: #ffffff;
+    padding: 2px 7px;
+    border-radius: 5px;
+    border: none;
+}
 
-
+.nxtPag a:hover{
+    background-color: black;
+    transition: all o.5s;
+    transform: scale(1.1);
+    border: none;
+}
 
 
 
@@ -253,7 +280,7 @@ body{
     color: rgb(234, 37, 37);
     font-weight: 600px;
     font-size: larger; 
-    transition: all s;
+    transition: all 0.5s;
 }
 .image{
     background-image: url(../Images/home1_layer5.png);
